=====================================

Changes that could break older environments:
--------------------------------------------
* Changed namespace processing. The namespace uri
  of nested elements of a type or a task are now the
  same as the type or task. Previously the namespace uri
  of nested elements was ant's namespace uri. This change will affect users
  of ant 1.6b1 and ant 1.6b2.

Fixed bugs:
-----------
* better debugging support for ApacheCatalogResolver
  Bugzilla Report 24070.

* use of <parallel> and xmlns:prefix="antlib:package"

* user and new arguments were swapped in PropertyHelper setNew and setUser.
  Bugzilla Report 23966.

* <style/> be able to resolve entities inside stylesheets.

* <csc> and other .NET tasks : fixed Error when compiling many source files.
  Bugzilla Report 19630.

* <junit> Make properties available in timed-out tests.
   Bugzilla Report 23935.

* <junit> Pull ant-launcher.jar in the runtime as well.

* <telnet> : better support for people debugging timed out reads.

* <ssh> : parse properly return codes from server.
  Also fix for Bugzilla Report 23986.

* <scp> If remotedir has been omitted, make it default to "." .
  Bugzilla Report 23987.

* starteam tasks : insure proper disconnect from the server.
  Bugzilla Report 24110.

* <script>, <scriptdef>
  fix problem : script task cannot cope with undefined task/type elements in buildfile
  Bugzilla Report 23915.

* <cvstagdiff> had a problem with aliased modules and with requests for multiple modules.
  Bugzilla Reports 21373 and 22877.

* <cvstagdiff> could not parse properly the revision number of new files with CVS 1.11.9 or higher.
  Bugzilla Report 24406.

* <ftp> null pointer exception when attempting rmdir in an empty directory.
  Bugzilla Report 24440.

Other changes:
--------------
* Change default uri from ant:core to antlib:org.apache.tools.ant

* upgrade to xml-apis.jar from Xerces-J 2.5.0.

* set project for created targets.
